crates/ridge-typecheck/tests/snapshots/workspace__t17_workspace_acme_typed_happy.snap
---
source: crates/ridge-typecheck/tests/workspace.rs
expression: snap
---
WorkspaceSnapshot {
    errors: [],
    module_count: 2,
    tycon_count: 109,
}
